--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>7조</title>
-</head>
-<body>
-    
-</body>
+    <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/style.css" type="text/css" />
+  </head>
+
+  <body>
+    <img src="/images/bonobono.jpg" alt="bonobono">
+    <h1>
+        안녕하세요. 7조 프로젝트 시작했습니다.
+    </h1>
+    <script src="/js/script.js"></script>
+  </body>
 </html>
