--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>
         안녕하세요. 7조 프로젝트 시작했습니다.
     </h1>
+    <h3>jjaney : git clone 완료</h3>
     <script src="/js/script.js"></script>
   </body>
 </html>
