디벨롭 생성 기념

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <body>
     <img src="/images/bonobono.jpg" alt="bonobono">
     <h1>
-        안녕하세요. 7조 프로젝트 시작했습니다.
+        디벨롭 보노
     </h1>
-    <h3>jjaney : git clone 완료</h3>
     <script src="/js/script.js"></script>
   </body>
 </html>
