--- a/main-top.html
+++ b/main-top.html
@@ -5,21 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>7조</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/main-top.css" type="text/css" />
+    <link rel="stylesheet" href="/css/style.css" type="text/css" />
   </head>
 
   <body>
-    <!-- 네비게이션바 들어갈 자리 -->
 
     <!-- 하이오 커피 비디오-->
-    <div class="video-section">
+    <div class="main-top-video-section">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/lOvxIwdk_us?si=FWjevR9PzgwM4ExR&autoplay=1&loop=1&playlist=lOvxIwdk_us&mute=1&controls=0&modestbranding=1" 
       title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
       </iframe>
-      <div class="video-content">
+      <div class="main-top-video-content">
           <div>프로페셔널한 커피</div>
           <div>감동적인 맛,</div>
-          <div class="video-content-hiocoffee">하이오커피</div>
+          <div class="main-top-video-lastline">하이오커피</div>
       </div>
     </div>
 
@@ -54,6 +53,7 @@
     </div>
 
     <!--하이오 커피 소개 문구-->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/js/main-top.js"></script>
   </body>
