--- a/main-top.html
+++ b/main-top.html
@@ -10,21 +10,24 @@
 
   <body>
 
-    <!-- 하이오 커피 비디오-->
+    <!-- 하이오 커피 비디오--> 
     <div class="main-top-video-section">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/lOvxIwdk_us?si=FWjevR9PzgwM4ExR&autoplay=1&loop=1&playlist=lOvxIwdk_us&mute=1&controls=0&modestbranding=1" 
-      title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-      </iframe>
+      <video width="560" height="315" autoplay loop muted>
+        <source src="./src/hiocoffee-video.mp4" type="video/mp4">
+        Your browser does not support the video tag. 
+      </video>
       <div class="main-top-video-content">
           <div>프로페셔널한 커피</div>
           <div>감동적인 맛,</div>
           <div class="main-top-video-lastline">하이오커피</div>
       </div>
-    </div>
+    </div> 
+
+
 
     <!--하이오 커피 소개 캐러셀-->
     <div>
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2500">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -32,13 +35,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/main-banner-1.jpg" class="d-block w-100" alt="...">
+            <img src="./src/main-banner-1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/main-banner-2.png" class="d-block w-100" alt="...">
+            <img src="./src/main-banner-2.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/main-banner-3.jpg" class="d-block w-100" alt="...">
+            <img src="./src/main-banner-3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
