--- a/main-top.html
+++ b/main-top.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
+  <head> 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>7조</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main-top.css" type="text/css" />
   </head>
@@ -16,9 +17,9 @@
         <source src="./src/hiocoffee-video.mp4" type="video/mp4">
         Your browser does not support the video tag. 
       </video>
-      <div class="main-top-video-content">
-          <div>프로페셔널한 커피</div>
-          <div>감동적인 맛,</div>
+      <div class="main-top-video-content" data-aos="fade-up" data-aos-duration="2500">
+          <div class="main-top-video-firstlines">프로페셔널한 커피</div>
+          <div class="main-top-video-firstlines">감동적인 맛,</div>
           <div class="main-top-video-lastline">하이오커피</div>
       </div>
     </div> 
@@ -27,20 +28,20 @@
 
     <!--하이오 커피 소개 캐러셀-->
     <div>
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2500">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item main-top-carousel-item active">
             <img src="./src/main-banner-1.jpg" class="d-block w-100" alt="...">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item main-top-carousel-item">
             <img src="./src/main-banner-2.png" class="d-block w-100" alt="...">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item main-top-carousel-item">
             <img src="./src/main-banner-3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
@@ -57,7 +58,11 @@
 
     <!--하이오 커피 소개 문구-->
 
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/js/main-top.js"></script>
+    <script>
+      AOS.init(); 
+    </script>
   </body>
 </html>
