--- a/index.html
+++ b/index.html
@@ -41,17 +41,28 @@
               <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"><i class="fa-solid fa-bars" style="color: #ffffff;"></i></button>
                   <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
                   <div class="offcanvas-header">
-                      <h5 id="offcanvasTopLabel">Offcanvas top</h5>
+                      <h4 class="offcanvas-header-text" id="offcanvasTopLabel">CATEGORY</h4>
                       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                   </div>
                   <div class="offcanvas-body">
-                      ...
+                    <div class="nav-offcanvas-container">
+                      <p class="nav-offcanvas-menu">ABOUT</p>
+                      <p class="nav-offcanvas-menu">MENU</p>
+                      <p class="nav-offcanvas-menu">COMMUNITY</p>
+                    </div>
                   </div>
               </div>
           </div>
       </div>
   </nav>
+
+
+
+
   <div style="height: 1000px; background-color: rgb(170, 233, 212);">바디가 들어갈 부분 입니다</div>
+
+
+
 
   <footer class="footer-container">
     <div class="footer-items">
@@ -69,16 +80,18 @@
           <p>하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림 101호</p>
         </div>
       </div>
-      <div class="footer-menu-container">
-        <p class="footer-menu">회사명 : (주)코알누</p>
-        <p class="footer-menu">TEL : 1345-7890</p>
-        <p class="footer-menu">FAX : 02-4456-8897</p>
-        <p class="footer-menu">E-mail : koRnu@google.com</p>
+      <div class="footer-info-container">
+        <p class="footer-info">회사명 : (주)코알누</p>
+        <p class="footer-info">TEL : 1345-7890</p>
+        <p class="footer-info footer-info-none">FAX : 02-4456-8897</p>
+        <p class="footer-info footer-info-none">E-mail : koRnu@google.com</p>
       </div>
       <div class="footer-copyright">
         <p>Copyright (C) coRnu Coffee. All Right Reserced.</p>
       </div>
-    </div>
+      <div class="footer-media-logo-container">
+      <img class="footer-media-logo" src="https://hiocoffee.com/sub/img/logo_n.png">
+      </div>
   </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
