--- a/main-bottom.html
+++ b/main-bottom.html
@@ -10,6 +10,7 @@
   <body>
     <div id="drinks-wrapper">
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script type="module" src="/js/main_bottom.js"></script>
   </body>
 </html>
