--- a/main-top.html
+++ b/main-top.html
@@ -6,10 +6,57 @@
     <title>7조</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/2c827c8cca.js" crossorigin="anonymous"></script> 
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="/css/main-top.css" type="text/css" />
   </head>
 
   <body>
+
+    <nav class="nav">
+      <div class="nav-style">
+          <div class="nav-logo">
+              <img src="https://hiocoffee.com/sub/img/logo_n.png" style="height: 65px;">
+          </div>
+          <div class="nav-logo-mediaQuery">
+              <img src="./src/navLogo.png" style="height: 65px;">
+          </div>
+          <div class="nav-menu">
+              <h3 class="nav-menu-text">ABOUT</h3>
+              <h3 class="nav-menu-text">MENU</h3>
+              <h3 class="nav-menu-text">COMMUNITY</h3>
+          </div>
+          <div class="nav-sns">
+              <div class="nav-ico-box">
+                  <i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i>
+              </div>
+              <div class="nav-ico-box">
+                  <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+              </div>
+              <div class="nav-ico-box">
+                  <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+              </div>
+          </div>
+
+          <!-- 테블릿, 모바일용 nav 오프캔버스 -->
+          <div class="nav-offcanvas">
+              <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"><i class="fa-solid fa-bars" style="color: #ffffff;"></i></button>
+                  <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+                  <div class="offcanvas-header">
+                      <h4 class="offcanvas-header-text" id="offcanvasTopLabel">CATEGORY</h4>
+                      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                  </div>
+                  <div class="offcanvas-body">
+                    <div class="nav-offcanvas-container">
+                      <p class="nav-offcanvas-menu">ABOUT</p>
+                      <p class="nav-offcanvas-menu">MENU</p>
+                      <p class="nav-offcanvas-menu">COMMUNITY</p>
+                    </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </nav>
 
     <!-- 하이오 커피 비디오--> 
     <div class="main-top-video-section">
@@ -57,6 +104,36 @@
     </div>
 
     <!--하이오 커피 소개 문구-->
+
+    <footer class="footer-container">
+      <div class="footer-items">
+        <div class="footer-menu-container">
+          <p class="footer-menu">사이트 이용약관</p>
+          <p class="footer-menu">개인정보취급방침</p>
+          <p class="footer-menu">이메일무단수집거부</p>
+          <p class="footer-menu">찾아오시는 길</p>
+        </div>
+        <div class="footer-secondline-container">
+          <img src="https://hiocoffee.com/sub/img/logo2.png" style="height: fit-content; width: fit-content;"/>
+          <div class="footer-secondline-location">
+            <p style="margin-bottom: 5px;">하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101 코알누타워 A동</p>
+            <p style="margin-bottom: 5px;">하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동 301호</p>
+            <p>하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림 101호</p>
+          </div>
+        </div>
+        <div class="footer-info-container">
+          <p class="footer-info">회사명 : (주)코알누</p>
+          <p class="footer-info">TEL : 1345-7890</p>
+          <p class="footer-info footer-info-none">FAX : 02-4456-8897</p>
+          <p class="footer-info footer-info-none">E-mail : koRnu@google.com</p>
+        </div>
+        <div class="footer-copyright">
+          <p>Copyright (C) coRnu Coffee. All Right Reserced.</p>
+        </div>
+        <div class="footer-media-logo-container">
+        <img class="footer-media-logo" src="https://hiocoffee.com/sub/img/logo_n.png">
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
