--- a/espresso.html
+++ b/espresso.html
@@ -21,16 +21,15 @@
 <!--메뉴 카테고리 LIST-->
     <div class="nav_menu">
         
-        <ul class="nav nav_list" id="">
-            <div class="nav_list-first"><span>BEVERAGE</span> <i class="fa-solid fa-caret-down"></i></div>
+        <ul class="nav nav_list">
             <li class="nav-item ">
-              <a class="nav-link menu_active" aria-current="page" href="#">전체</a>
+              <a class="nav-link " aria-current="page" href="#">전체</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="new.html">NEW</a>
+              <a class="nav-link " href="new.html">NEW</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="#">ESPRESSO</a>
+              <a class="nav-link menu_active" href="espresso.html">ESPRESSO</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" >BEVERAGE</a>
