--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <nav class="nav">
       <div class="nav-style">
           <div class="nav-logo">
-              <img src="https://hiocoffee.com/sub/img/logo_n.png" style="height: 65px;">
+              <img src="./src/logo-black-withCoffee.png" style="height: 65px;">
           </div>
           <div class="nav-logo-mediaQuery">
-              <img src="./src/navLogo.png" style="height: 65px;">
+              <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0;">
           </div>
           <div class="nav-menu">
               <h3 class="nav-menu-text">ABOUT</h3>
@@ -54,7 +54,7 @@
               </div>
           </div>
       </div>
-  </nav>
+    </nav>
 
 
 
@@ -64,35 +64,35 @@
 
 
 
-  <footer class="footer-container">
-    <div class="footer-items">
-      <div class="footer-menu-container">
-        <p class="footer-menu">사이트 이용약관</p>
-        <p class="footer-menu">개인정보취급방침</p>
-        <p class="footer-menu">이메일무단수집거부</p>
-        <p class="footer-menu">찾아오시는 길</p>
-      </div>
-      <div class="footer-secondline-container">
-        <img src="https://hiocoffee.com/sub/img/logo2.png" style="height: fit-content; width: fit-content;"/>
-        <div class="footer-secondline-location">
-          <p style="margin-bottom: 5px;">하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101 코알누타워 A동</p>
-          <p style="margin-bottom: 5px;">하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동 301호</p>
-          <p>하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림 101호</p>
+    <footer class="footer-container">
+      <div class="footer-items">
+        <div class="footer-menu-container">
+          <p class="footer-menu">사이트 이용약관</p>
+          <p class="footer-menu">개인정보취급방침</p>
+          <p class="footer-menu">이메일무단수집거부</p>
+          <p class="footer-menu">찾아오시는 길</p>
         </div>
-      </div>
-      <div class="footer-info-container">
-        <p class="footer-info">회사명 : (주)코알누</p>
-        <p class="footer-info">TEL : 1345-7890</p>
-        <p class="footer-info footer-info-none">FAX : 02-4456-8897</p>
-        <p class="footer-info footer-info-none">E-mail : koRnu@google.com</p>
-      </div>
-      <div class="footer-copyright">
-        <p>Copyright (C) coRnu Coffee. All Right Reserced.</p>
-      </div>
-      <div class="footer-media-logo-container">
-      <img class="footer-media-logo" src="https://hiocoffee.com/sub/img/logo_n.png">
-      </div>
-  </footer>
+        <div class="footer-secondline-container">
+          <img src="./src/logo-white.png" style="height: 55px; width: fit-content;"/>
+          <div class="footer-secondline-location">
+            <p style="margin-bottom: 5px;">하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101 코알누타워 A동</p>
+            <p style="margin-bottom: 5px;">하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동 301호</p>
+            <p>하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림 101호</p>
+          </div>
+        </div>
+        <div class="footer-info-container">
+          <p class="footer-info">회사명 : (주)코알누</p>
+          <p class="footer-info">TEL : 1345-7890</p>
+          <p class="footer-info footer-info-none">FAX : 02-4456-8897</p>
+          <p class="footer-info footer-info-none">E-mail : koRnu@google.com</p>
+        </div>
+        <div class="footer-copyright">
+          <p>Copyright (C) coRnu Coffee. All Right Reserced.</p>
+        </div>
+        <div class="footer-media-logo-container">
+        <img class="footer-media-logo" src="src/logo-media-bottom.png" style="height: 20vh; width: 23vw;">
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
