Feat: logo 클릭시 현재 페이지(메인) 에 머무르도록 구현

--- a/main-top.html
+++ b/main-top.html
@@ -18,10 +18,10 @@
     <nav class="nav">
       <div class="nav-style">
           <div class="nav-logo">
-              <img src="https://hiocoffee.com/sub/img/logo_n.png" style="height: 65px;">
+              <a href="#"><img src="https://hiocoffee.com/sub/img/logo_n.png" style="height: 65px;"></a>
           </div>
           <div class="nav-logo-mediaQuery">
-              <img src="./src/navLogo.png" style="height: 65px;">
+              <a href="#"><img src="./src/navLogo.png" style="height: 65px;"></a>
           </div>
           <div class="nav-menu">
               <h3 class="nav-menu-text">ABOUT</h3>
