Design: about의 두 번째 컨테이너까지 개발

--- a/about.html
+++ b/about.html
@@ -52,15 +52,66 @@
                         <p class="nav-offcanvas-menu">COMMUNITY</p>
                         </div>
                     </div>
+                    </div>
+            </div>
+        </div>
+        </nav>
+
+        <!-- 바디 메인 동작 -->
+        <div class="about-whole-container">
+            <div class="about-first-container">
+                <div class="about-first-titles">
+                    <div>
+                        <h1 class="about-first-title-firstline">BRAND</h1>
+                    </div>
+                    <div>
+                        <p class="about-first-title-secondline">A REASONABLE PRICE, A HIGH-QUALITY COFFEE</p>
+                    </div>
+                </div>
+                <div class="about-first-category">
+                    <div class="about-first-category-text">
+                        <p class="about-first-category-text-style">ABOUT US</p>
+                        <p class="about-first-category-text-style">인테리어</p>
+                        <p class="about-first-category-text-style">오시는 길</p>
+                    </div>
+                </div>
+            </div>
+        
+            <div class="about-second-container">
+                <div class="about-second-titles">
+                    <h4 style="font-size: 40px; margin-bottom: 15px;">프로들이 만드는 <b style="color: #5da0d8;">프로다운 커피</b></h4>
+                    <p style="color: #2727276e;">엄선된 품질 좋은 원두를 곱게 갈아 특별한 당신에게 새로운 가치와 따뜻한 여유를 선사합니다.</p>
+                </div>
+                <div class="about-second-li">
+                    <li>
+                        <img src="https://hiocoffee.com/sub/img/brandico02.png" style="height: 18vh; margin-bottom: 30px;">
+                        <p style="margin-bottom: 20px; font-size: 20px;">Various Attempts</p>
+                        "다양한 시도와 디자인으로 가치를 더하는 눈나커피"
+                    </li>
+                    <li>
+                        <img src="https://hiocoffee.com/sub/img/brandico01.png" style="height: 18vh; margin-bottom: 30px;">
+                        <p style="margin-bottom: 20px; font-size: 20px;">A Relaxed Store</p>
+                        "바쁜 일상 속 여유를 만들어줄 커뮤니티 매장"
+                    </li>
+                    <li>
+                        <img src="https://hiocoffee.com/sub/img/ico-val03.png" style="height: 18vh; margin-bottom: 30px;">
+                        <p style="margin-bottom: 20px; font-size: 20px;">Quality Beans</p>
+                        "에티오피아, 인도네시아의 커피농장에서 생산하고 엄선한 품질 좋은 원두"
+                    </li>
                 </div>
             </div>
         </div>
-    </nav>
 
 
 
 
-    <div style="height: 1000px; background-color: rgb(170, 233, 212);">바디가 들어갈 부분 입니다</div>
+
+
+
+
+
+
+
 
 
 
