--- a/main-top.html
+++ b/main-top.html
@@ -15,6 +15,7 @@
 
   <body>
 
+    <!--네비게이션바-->
     <nav class="nav">
       <div class="nav-style">
           <div class="nav-logo">
@@ -67,8 +68,8 @@
         Your browser does not support the video tag. 
       </video>
       <div class="main-top-video-content" data-aos="fade-up" data-aos-duration="2500">
-          <div class="main-top-video-firstlines">프로페셔널한 커피</div>
-          <div class="main-top-video-firstlines">감동적인 맛,</div>
+          <div>프로페셔널한 커피</div>
+          <div>감동적인 맛,</div>
           <div class="main-top-video-lastline">하이오커피</div>
       </div>
     </div> 
@@ -106,7 +107,85 @@
     </div>
 
     <!--하이오 커피 소개 문구-->
+    <div class="main-top-value-section"> 
 
+      <div class="main-top-box">
+        <div class="main-top-box-heading mb-3"> 
+          <span>HIO COFFEE</span>'S VALUATION
+        </div>
+        <div class="main-top-box-middle mb-2">
+          “하이오와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
+        </div>
+        <div class="main-top-box-lastline"> 
+          A Reasonable price, A High-quality coffee, Anyone, At any Time With HIO
+        </div>
+      </div>
+
+      <div class="text-center main-top-value-cards">
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">
+            <div class="card my-4 py-3" style="width: 100%;">
+              <img src="./src/maintop-coffeebean.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <div class="card-title">하이오커피의 원두</div>
+                <p class="card-text">
+                  각 나라별 산지에서 엄선된 생두를 사용함과
+                  동시에 생두의 생산에 직접적인 영향을 주는
+                  바람, 태양, 비, 기후, 토양, 고도, 온도, 경작 법,
+                  수확 방법 등 까다로운 조건을 고려하여
+                  친환경적인 농법으로 재배된 잘 익은 체리만을
+                  고집한 원두입니다.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <div class="card my-4 py-3" style="width: 100%;">
+              <img src="./src/maintop-cup.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <div class="card-title">하이오커피의 컵</div>
+                <p class="card-text">
+                  하이오커피는 친환경 리유저블 컵을 사용합니다. 
+                  테이크아웃과 딜리버리에 적합한 아이템, 강한 내열성과 냉·보온을 유지할 수 있는 높은 지속성, 
+                  그리고 감각적인 컵 디자인과 하트 마개를 이용한 편의성을 추구합니다.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-4"> 
+            <div class="card my-4 py-3" style="width: 100%;">
+              <img src="./src/maintop-graph.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <div class="card-title">브랜드 경쟁력</div>
+                <p class="card-text">
+                  유통 구조 개선 시스템 및 본사 직구매로 인한
+                  원가절감, 현장 중심적인 교육을 통한 실질적
+                  운영 노하우 전수, 본사 상품개발팀을 통한
+                  지속적인 메뉴 개발로 브랜드 경쟁력을 올립니다
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!--footer-->
+    <!--
     <footer class="footer-container">
       <div class="footer-items">
         <div class="footer-menu-container">
@@ -136,6 +215,7 @@
         <img class="footer-media-logo" src="https://hiocoffee.com/sub/img/logo_n.png">
         </div>
     </footer>
+    -->
 
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
