Design: about-us 1차 개발 완료

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-        
+
             <div class="about-second-container">
                 <div class="about-second-titles">
                     <h4 style="font-size: 40px; margin-bottom: 15px;">프로들이 만드는 <b style="color: #5da0d8;">프로다운 커피</b></h4>
@@ -98,6 +98,17 @@
                         <p style="margin-bottom: 20px; font-size: 20px;">Quality Beans</p>
                         "에티오피아, 인도네시아의 커피농장에서 생산하고 엄선한 품질 좋은 원두"
                     </li>
+                </div>
+            </div>
+            <div class="about-third-container-bgimg">
+                <div class="about-third-container">
+                    <div class="about-third-container-text">
+                        <h3 style="font-size: 40px; margin-bottom: 15px;">Simbol Mark</h3>
+                        <p style="color: rgba(224, 224, 224, 0.479);">눈나 커피의 넉넉한 용량의 커피를 하늘에서 내려오는 원두로 표현하였습니다. </p>
+                    </div>
+                    <div>
+                        <img class="about-third-simbolImg" src="./src/noonNaCoffee-simbolMark.png">
+                    </div>
                 </div>
             </div>
         </div>
