Chore: css class name 수정

--- a/main-top.html
+++ b/main-top.html
@@ -106,22 +106,22 @@
       </div>
     </div>
 
-    <!--하이오 커피 소개 문구-->
-    <div class="main-top-value-section"> 
+    <!--하이오 커피 소개 섹션 --> 
+    <div class="main-top-section3"> 
 
-      <div class="main-top-box">
-        <div class="main-top-box-heading mb-3"> 
+      <div data-aos="fade-right" data-aos-duration="2500">
+        <div class="main-top-headline mb-3"> 
           <span>HIO COFFEE</span>'S VALUATION
         </div>
-        <div class="main-top-box-middle mb-2">
+        <div class="main-top-firstline mb-2">
           “하이오와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
         </div>
-        <div class="main-top-box-lastline"> 
+        <div class="main-top-secondline"> 
           A Reasonable price, A High-quality coffee, Anyone, At any Time With HIO
         </div>
       </div>
 
-      <div class="text-center main-top-value-cards">
+      <div class="text-center main-top-cards" data-aos="fade-left" data-aos-duration="3000">
         <div class="row">
           <div class="col-xs-12 col-sm-4">
             <div class="card my-4 py-3" style="width: 100%;">
@@ -131,8 +131,8 @@
                 <p class="card-text">
                   각 나라별 산지에서 엄선된 생두를 사용함과
                   동시에 생두의 생산에 직접적인 영향을 주는
-                  바람, 태양, 비, 기후, 토양, 고도, 온도, 경작 법,
-                  수확 방법 등 까다로운 조건을 고려하여
+                  바람, 태양, 비, 기후, 토양, 고도, 온도, 경작법,
+                  수확 방법 등 까다로운 조건을 고려하여 
                   친환경적인 농법으로 재배된 잘 익은 체리만을
                   고집한 원두입니다.
                 </p>
@@ -146,7 +146,8 @@
                 <div class="card-title">하이오커피의 컵</div>
                 <p class="card-text">
                   하이오커피는 친환경 리유저블 컵을 사용합니다. 
-                  테이크아웃과 딜리버리에 적합한 아이템, 강한 내열성과 냉·보온을 유지할 수 있는 높은 지속성, 
+                  테이크아웃과 딜리버리에 적합한 아이템, 강한 내열성과 
+                  냉·보온을 유지할 수 있는 높은 지속성, 
                   그리고 감각적인 컵 디자인과 하트 마개를 이용한 편의성을 추구합니다.
                 </p>
               </div>
@@ -169,23 +170,9 @@
         </div>
       </div>
 
-
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
     <!--footer-->
-    <!--
     <footer class="footer-container">
       <div class="footer-items">
         <div class="footer-menu-container">
@@ -215,7 +202,6 @@
         <img class="footer-media-logo" src="https://hiocoffee.com/sub/img/logo_n.png">
         </div>
     </footer>
-    -->
 
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
