--- a/main-bottom.html
+++ b/main-bottom.html
@@ -8,7 +8,19 @@
   </head>
 
   <body>
-    <div id="drinks-wrapper">
+    <div id="test">main-top</div>
+    <div id="drink-section">
+      <div class="drink-text">
+        <h3 class="drink-title">
+          <span>NOONA COFFEE</span>
+          'S BEST MENU
+        </h3>
+        <p>
+          "눈나커피의 베스트 메뉴를 만나보세요."
+        </p>
+      </div>
+      <div id="drinks-wrapper">
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script type="module" src="/js/main_bottom.js"></script>
