Design : main-top.html navbar 로고 적용

--- a/main-top.html
+++ b/main-top.html
@@ -14,15 +14,13 @@
   </head>
 
   <body>
-
-    <!--네비게이션바-->
     <nav class="nav">
       <div class="nav-style">
           <div class="nav-logo">
-              <a href="#"><img src="https://hiocoffee.com/sub/img/logo_n.png" style="height: 65px;"></a>
+            <img src="./src/logo-black-withCoffee.png" style="height: 65px;">
           </div>
           <div class="nav-logo-mediaQuery">
-              <a href="#"><img src="./src/navLogo.png" style="height: 65px;"></a>
+            <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0;">
           </div>
           <div class="nav-menu">
               <h3 class="nav-menu-text">ABOUT</h3>
