--- a/main-top.html
+++ b/main-top.html
@@ -39,7 +39,7 @@
               </div>
           </div>
 
-          <!-- 테블릿, 모바일용 nav 오프캔버스 -->
+          <!-- 테블릿, 모바일용 nav 오프캔버스-->  
           <div class="nav-offcanvas">
               <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"><i class="fa-solid fa-bars" style="color: #ffffff;"></i></button>
                   <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
@@ -57,7 +57,9 @@
               </div>
           </div>
       </div>
-  </nav>
+  </nav> 
+
+
 
     <!-- 하이오 커피 비디오--> 
     <div class="main-top-video-section">
@@ -104,8 +106,54 @@
       </div>
     </div>
 
+    <section class="container main-top-section inner" data-aos="fade-up" data-aos-duration="2500"> 
+      <div>
+        <div class="main-top-title">
+          <span>HIO COFFEE</span>'S VALUATION
+        </div>
+        <p class="main-top-txt">“하이오와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”</p>
+        <span class="main-top-subtxt">
+          A Reasonable price, A High-quality coffee, Anyone, At any Time With HIO
+        </span>
+      </div>
 
-    <!--footer-->
+      <ul>
+        <li>
+          <img src="./src/maintop-coffeebean.png"/>
+          <h6>하이오커피의 원두</h6>
+          <p>
+            각 나라별 산지에서 엄선된 생두를 사용함과 
+            동시에 생두의 생산에 직접적인 영향을 주는 
+            바람, 태양, 비, 기후, 토양, 고도, 온도, 경작 법,
+            수확 방법 등 까다로운 조건을 고려하여 
+            친환경적인 농법으로 재배된 잘 익은 체리만을 
+            고집한 원두입니다.
+          </p>
+        </li>
+        <li>
+          <img src="./src/maintop-cup.png"/>
+          <h6>하이오커피의 컵</h6>
+          <p>하이오커피는 친환경 리유저블 컵을 사용합니다.
+            테이크아웃과 딜리버리에 적합한 아이템,
+            강한 내열성과 냉·보온을 유지할 수 있는 높은 지속성,
+            그리고 감각적인 컵 디자인과 하트 마개를 이용한
+            편의성을 추구합니다.</p>
+        </li>
+        <li>
+          <img src="./src/maintop-graph.png"/> 
+          <h6>브랜드 경쟁력</h6>
+          <p>유통 구조 개선 시스템 및 본사 직구매로 인한 
+            원가절감, 현장 중심적인 교육을 통한 실질적 
+            운영 노하우 전수, 본사 상품개발팀을 통한
+            지속적인 메뉴 개발로 브랜드 경쟁력을 올립니다</p>
+        </li>
+      </ul>
+
+    </section>
+
+    <!--main-bottom 들어갈 자리 -->
+
+    <!-- 
     <footer class="footer-container">
       <div class="footer-items">
         <div class="footer-menu-container">
@@ -134,7 +182,7 @@
         <div class="footer-media-logo-container">
         <img class="footer-media-logo" src="https://hiocoffee.com/sub/img/logo_n.png">
         </div>
-    </footer>
+        -->
 
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
