style : main 태그 추가

--- a/main-top.html
+++ b/main-top.html
@@ -59,6 +59,7 @@
       </div>
   </nav> 
 
+  <main> 
     <!-- 하이오 커피 비디오--> 
     <div class="main-top-video-section">
       <video width="560" height="315" autoplay loop muted>
@@ -145,8 +146,8 @@
         </li>
       </ul>
     </section>
-
     <!--main-bottom 들어갈 자리 -->
+  </main>
 
     <!-- 
     <footer class="footer-container">
