Fixed: main, footer 겹치는 오류 fixed

--- a/main-top.html
+++ b/main-top.html
@@ -59,7 +59,7 @@
       </div>
   </nav> 
 
-  <main> 
+  <main class="main"> 
     <!-- 하이오 커피 비디오--> 
     <div class="main-top-video-section">
       <video width="560" height="315" autoplay loop muted>
@@ -149,7 +149,6 @@
     <!--main-bottom 들어갈 자리 -->
   </main>
 
-    <!-- 
     <footer class="footer-container">
       <div class="footer-items">
       <div class="footer-menu-container">
@@ -179,9 +178,6 @@
       <img class="footer-media-logo" src="src/logo-media-bottom.png" style="height: 20vh; width: 23vw;">
       </div>
   </footer>
-  -->
-
-    
 
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
