--- a/index.html
+++ b/index.html
@@ -349,18 +349,21 @@
               class="active"
               aria-current="true"
               aria-label="Slide 1"
+              onclick="setMapHeight()"
             ></button>
             <button
               type="button"
               data-bs-target="#main-bottom-mobile-map-indicators"
               data-bs-slide-to="1"
               aria-label="Slide 2"
+              onclick="setMapHeight()"
             ></button>
             <button
               type="button"
               data-bs-target="#main-bottom-mobile-map-indicators"
               data-bs-slide-to="2"
               aria-label="Slide 3"
+              onclick="setMapHeight()"
             ></button>
           </div>
           <div class="carousel-inner">
