폰트 크기 수정

--- a/menu-bottom.html
+++ b/menu-bottom.html
@@ -395,7 +395,7 @@
       <div class="last-season-title text-center">
         <!--타이틀-->
         <h4>
-          눈나커피's <span>Last Season Menu</span>
+          눈나's <span>Last Season Menu</span>
           <div>____</div>
         </h4>
       </div>
